// Copyright (C) 2022 Quickwit, Inc.
//
// Quickwit is offered under the AGPL v3.0 and as commercial software.
// For commercial licensing, contact us at hello@quickwit.io.
//
// AGPL:
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.


syntax = "proto3";

package quicklet_api;

// Rename to IndexingService?
service QuickletService {
  // Apply a PhsysicalIndexingPlan.
  rpc applyPhysicalIndexingPlan(PhysicalIndexingPlanRequest) returns (PhysicalIndexingPlanResponse);
}

message PhysicalIndexingPlanRequest {
  repeated IndexingTask tasks = 1;
}

message PhysicalIndexingPlanResponse {
}

message IndexingTask {
  // Index ID.
  string index_id = 1;

  // Source ID.
  string source_id = 2;

  // Number of tasks for this index ID and source ID.
  uint64 num_tasks = 3;

  // Task index, value in [0, num_workers[.
  uint64 task_idx = 4;

  // Publish token.
  string publish_token = 5;
}
